name:                Spacewar
version:             0.1.0.0

-- description:
license:             MIT
license-file:        LICENSE
author:              Matt Keeter
maintainer:          matt.j.keeter@gmail.com

-- copyright:
category:            Game
build-type:          Simple

-- extra-source-files:
cabal-version:       >=1.10

executable spacewar
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base == 4.8.*,
    GLUT == 2.7.*,
    linear == 1.18.*,
    random == 1.*,
    bytestring == 0.10.6.*,
    vector == 0.10.*,
    spool == 0.1.*
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:    -Wall
